--- a/html/about.html
+++ b/html/about.html
@@ -12,7 +12,7 @@
     <nav>
         <ul>
             <li><a href="index.html">home</a></li>
-            <li><a href="about.html">about</a></li>
+            <li><a href="./about.html">about</a></li>
             <li><a href="#footer">contact</a></li>
         </ul>
     </nav>
