--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <section>
         <h2>Featured product </h2>
         <div class="item" id="featureddog">
-            <img src="../img/labrador.jpeg" alt="no image of dog" id="feadog">
+            <img src="img/labrador.jpeg" alt="no image of dog" id="feadog">
             <table>
                 <tr>
                     <td>dog name</td>
@@ -35,7 +35,7 @@
         </div>
         <h2>Now available in store:</h2>
         <div class="item" id="">
-            <img src="../img/german.webp" alt="no image of dog">
+            <img src="img/german.webp" alt="no image of dog">
             <table>
                 <tr>
                     <td>dog name</td>
@@ -49,7 +49,7 @@
             <button>add to cart</button>
         </div>
         <div class="item" id="">
-            <img src="../img/frenchbull.webp" alt="no image of dog">
+            <img src="img/frenchbull.webp" alt="no image of dog">
             <table>
                 <tr>
                     <td>dog name</td>
@@ -63,7 +63,7 @@
             <button>add to cart</button>
         </div>
         <div class="item" id="">
-            <img src="../img/german.webp" alt="no image of dog">
+            <img src="img/german.webp" alt="no image of dog">
             <table>
                 <tr>
                     <td>dog name</td>
@@ -81,6 +81,6 @@
         <h1>contact information</h1>
         <p>call to 7022222222</p><b>or</b><p>mail to doggy@store.com</p>
         <p>&copy; 2024 E-commerce Website. All rights reserved.</p>
-    </footer>
+    </foot
 </body>
 </html>
