--- a/index.html
+++ b/index.html
@@ -81,6 +81,6 @@
         <h1>contact information</h1>
         <p>call to 7022222222</p><b>or</b><p>mail to doggy@store.com</p>
         <p>&copy; 2024 E-commerce Website. All rights reserved.</p>
-    </foot
+    </footer>
 </body>
 </html>
